--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -e js,json,prisma --exec \"prisma generate && node src/index.js\""
   },
   "dependencies": {
     "@prisma/client": "^6.7.0",
